center and fix spacing for contact form

--- a/src/index.css
+++ b/src/index.css
@@ -186,13 +186,15 @@ h4 {
 }
 
 .contact-c {
-  float:left; 
-  padding: 20px 20px 20px 20;
-  border-radius: 1%;
+  width:30%;
+  padding: 0 70px 20px 30px;
   background-color:#fff9f69c;
   box-shadow: 5px 5px 8px #020202;
   text-shadow: rgb(252, 249, 249) 0px 0px 10px;
-  position: center;
+  border-radius: 3px;
+  width: 350px;
+  display:block;
+  margin: 0 auto;
 }
 
 .projects-m {
@@ -209,21 +211,13 @@ h4 {
 
 }
 
-.contact-c {
-  width:30%;
-  padding: 0 30px 30px 30px;
-  margin-top: 40px;
-  margin-left: 500px;
-
-  padding: 10px;
-}
-
 .input {
   padding: 5px 5px 5px 10px;
 }
 
+
 .submit {
-  margin-left: 10px;
+  margin-top: 30px;
   background-color: #cadde9;
   border-radius: 3px;
   border: 1px solid #5496c5;
@@ -235,11 +229,10 @@ h4 {
   font-size: 13px;
   font-weight: 400;
   line-height: 1.15385;
-
   outline: none;
   padding: 8px .8em;
-  position: relative;
-  text-align: center;
+  
+  
   text-decoration: none;
   user-select: none;
   -webkit-user-select: none;
